--- a/style.css
+++ b/style.css
@@ -5,28 +5,42 @@
     padding: 0;
     box-sizing: border-box;
 }
-  
-  body {
+
+body {
     font-family: 'Segoe UI', sans-serif;
-    background: #f9f9f9;
+    background: linear-gradient(135deg, #f2f2f2, #dbeafe);
     color: #333;
     line-height: 1.6;
+  display: flex;
+  flex-direction: column;
+  height: 100vh
 }
-  
 header {
- background: #222;
- color: white;
- text-align: center;
- padding: 30px 20px;
-}
-  
+  background: #222;
+  color: white;
+  text-align: center;
+  padding: 30px 20px;
+ }
+   
+
 .logo {
-       width: 80px;
+ width: 80px;
  height: 80px;
-  border-radius: 50%;
-     object-fit: cover;
+ border-radius: 50%;
+   object-fit: cover;
    margin-bottom: 10px;
   }
+  
+  
+  .center-logo-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
+   
+  }
+  
+  
   
   nav {
     background: #444;
@@ -136,6 +150,12 @@ header {
   }
 
 
+  .emoji-row {
+    text-align: center;
+    padding: 15px;
+    font-size: 20px;
+    color: #444;
+  }
   
   
   
@@ -144,8 +164,8 @@ header {
     color: white;
     text-align: center;
     padding: 20px;
-    margin-top: 50px;
-  }
+    margin-top: auto;
+    }
 
   .game-grid {
     display: grid;
@@ -181,6 +201,14 @@ header {
     width: 320px;
     text-align: center;
   }
+  
+
+
+  
+  
+
+  
+  
   
 
 
